fix word spacing

--- a/src/components/content.less
+++ b/src/components/content.less
@@ -23,33 +23,33 @@
     padding-left: 10vw;
     display: flex;
     flex-flow: column;
+    margin-right: 50px;
 
     span {
-      height: 100px;
-      margin-left: 30px;
+      margin: -50px 0 0 30px;
     }
 
     .intro-text {
-      margin-top: calc(-4vw - (100vh / 5));
+      margin-top: calc(-1.3vw - (100vh / 5));
       padding-top: calc(100vh / 5);
       height: 100vh;
-      width: 100%;
       scroll-snap-align: start;
-      margin-right: 50px;
 
-      display: flex;
-      width: 100%;
-      flex-flow: row wrap;
-      justify-content: flex-end;
+      .intro-text-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-end;
+      }
     }
 
     .first {
-      .introText;
+      .intro-text;
       margin-top: 0;
     }
 
     .iam {
-      .introText;
+      .intro-text;
+
       position: fixed;
       margin: 0 50px 0 0;
       scroll-snap-align: none;
